[package]
name = "prosa-ovserver"
version = "0.1.2"
authors = ["Jeremy HERGAULT"]
repository = "https://github.com/reneca/ProSA-OVServer"
license = "LGPL-3.0-or-later"
edition = "2024"
description = "ProSA adaptors for OVServer"

[package.metadata.prosa.fetcher]
adaptor = ["transmission::adaptor::TorrentAdaptor"]

[dependencies]
prosa-utils = "0.3"
prosa = "0.3"
prosa-fetcher = "0.3"

bytes = "1"
tokio = "1"
tracing = "0.1"
chrono = "0.4"
serde = "1"
serde_repr = "0.1"
serde_with = "3"
serde_json = "1"
base64 = "0.22"
opentelemetry = "0.29"

hyper = { version = "1", features = ["full"] }
http = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[dev-dependencies]
reqwest = "0.12"
